--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-auto-height": "^8.0.0-rc17",
+    "embla-carousel-react": "^8.0.0-rc17",
     "lucide-react": "^0.295.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
