--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@builder.io/react-hydration-overlay": "^0.0.8",
     "@headlessui/react": "^1.7.17",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -26,7 +25,7 @@
     "embla-carousel-auto-height": "^8.0.0-rc17",
     "embla-carousel-react": "^8.0.0-rc17",
     "lucide-react": "^0.295.0",
-    "next": "14.1.1",
+    "next": "^14.2.4",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
